syntax = "proto2";
import "goby/acomms/protobuf/driver_base.proto"; // load up message DriverBaseConfig

package goby.acomms.abc.protobuf;

message Config
{
    optional bool enable_foo = 1 [default = true];
    optional bool enable_bar = 2 [default = false];
}

extend goby.acomms.protobuf.DriverConfig
{
    optional Config config = 1201;
}
